...
      key: key,
      controller: textFieldController,
      textInputAction: TextInputAction.search,
      onFieldSubmitted: (_) => onActionSubmit(),
      validator: (value) {
        if (value != null && value.isNotEmpty && value.length < 3) {
          return "minimum seach text accepted should have 3 characters";
        } else if (value != null && regexWhiteSpace.hasMatch(value)) {
          return "search text should not end with whitespace";
        }
        return null;
      },
      maxLines: 1,
...
        Flexible(
            flex: 1,
            fit: FlexFit.loose,
            child: ElevatedButton(
              onPressed: isValid.value && !isLoading ? () => onSubmit() : null,
              style: AppButtonStyle.elevated.configuration.style,
              child: const Text("Search"),
            )),
      ],
    );
  }
}

...
